// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different card variations eg(outline,outline(explicit),filled,raised) should render component as expected (1) 1`] = `
<gux-card-beta>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <span>
    This is a content slot
  </span>
</gux-card-beta>
`;

exports[`#render different card variations eg(outline,outline(explicit),filled,raised) should render component as expected (2) 1`] = `
<gux-card-beta accent="outline">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <span>
    This is a content slot
  </span>
</gux-card-beta>
`;

exports[`#render different card variations eg(outline,outline(explicit),filled,raised) should render component as expected (3) 1`] = `
<gux-card-beta accent="raised">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <span>
    This is a content slot
  </span>
</gux-card-beta>
`;

exports[`#render different card variations eg(outline,outline(explicit),filled,raised) should render component as expected (4) 1`] = `
<gux-card-beta accent="filled">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <span>
    This is a content slot
  </span>
</gux-card-beta>
`;
